# arc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: design.md  getting-started.md  git-interop.md  goals.md  workflow.md
src/: context.rs  global.rs  main.rs
src/commands/: change.rs  eject.rs  hook.rs  init.rs  intent.rs  log.rs  mod.rs  project.rs  pull.rs  push.rs  task.rs  undo.rs
src/format/: commit_message.rs  display.rs  mod.rs
src/git/: commit.rs  hooks.rs  mod.rs  refs.rs  repo.rs  worktree.rs
src/index/: change_map.rs  mod.rs  sqlite.rs
src/metadata/: change.rs  mod.rs  task.rs
tests/: e2e.sh
