[package]
name = "arc"
version = "0.1.0"
edition = "2024"
description = "Version control for codebases that didn't write themselves"
license = "MIT"

[[bin]]
name = "arc"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Git
git2 = "0.20"

# Local index
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
slug = "0.1"
thiserror = "2"
anyhow = "1"
colored = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
